fix nav links on mobile

--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -63,7 +63,7 @@ option {
 
 select:focus, input:focus, textarea:focus-visible {
     outline: 0;
-    border-bottom: 1px solid var(--green)!important;
+    border-bottom: 1px solid var(--orange)!important;
 }
 
 textarea:focus-visible {
